# assemblies_cpp

./: .gitignore  README.md  dev_log.md  作业要求.md
my_brain/: README.md  TODO.md
my_brain/config/: dict.csv  input.txt
my_brain/main/: CMakeLists.txt  main.cc
my_brain/src/: brain.cc  brain.h  constants.h  parser.cc  parser.h  pipeline.cc  pipeline.h  rules.cc  rules.h
my_brain/test/: CMakeLists.txt  main_test.cpp  test_cases.txt
report/: report.md
report/uml/: uml.drawio
